# ss13-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  snapshot.json
.github/workflows/: bump-smoke.yml  bump.yml  ci.yml  deploy.yml  publish-wiki.yml  release-dm-dump.yml
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
deploy/systemd/: vgstation13-mcp.service
dm-dump/: Cargo.toml
dm-dump/src/: main.rs
pipeline/: build_dm_index.py  clone_vg13.sh  crawl_wiki.py  pack_artifacts.py
src/ss13_mcp/: cache.py  dmi.py  resources.py  rsi.py  server.py  setup.py  snapshot.py
src/ss13_mcp/pipeline/: build_dm_index.py
src/ss13_mcp/tools/: assets.py  dm_index.py  meta.py  source.py
src/vgstation13_mcp/: app.py  auth.py  cache.py  ratelimit.py  resources.py  rsi.py  server.py  setup.py  snapshot.py
src/vgstation13_mcp/pipeline/: build_dm_index.py
src/vgstation13_mcp/tools/: assets.py  dm_index.py  meta.py  source.py  wiki.py
tests/: conftest.py  test_assets.py  test_auth.py  test_build_dm_index.py  test_crawl_wiki.py  test_dm_index.py  test_ratelimit.py  test_resources.py  test_setup.py  test_snapshot_info.py  test_source_tools.py  test_wiki_tools.py
tests/fixtures/: generate_fixture_dmi.py
tests/fixtures/mini-ss13/code/modules/test/: super_widget.dm  widget.dm
tests/fixtures/mini-vg13/: SHA
tests/fixtures/mini-vg13/icons/: test.dmi
tests/fixtures/mini-vg13/wiki_html/: Super_widget.html  Widget.html
