[project]
name = "vgstation13-mcp"
version = "0.1.0"
description = "MCP server for vgstation13 content"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mcp==1.2.0",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "authlib==1.3.2",
  "httpx==0.27.2",
  "selectolax==0.3.21",
  "html2text==2024.2.26",
  "pillow==11.0.0",
  "python-dotenv==1.0.1",
  "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.7.4",
  "httpx[cli]==0.27.2",
]

[project.scripts]
vgstation13-mcp = "vgstation13_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgstation13_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
