[project]
name = "vgstation13-mcp"
version = "0.1.0"
description = "Local MCP server exposing vgstation13 source and assets to AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
keywords = ["mcp", "vgstation13", "ss13", "byond", "llm-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp==1.2.0",
  "pillow==11.0.0",
  "platformdirs==4.3.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "pytest-timeout==2.3.1",
  "ruff==0.7.4",
]

[project.scripts]
vgstation13-mcp = "vgstation13_mcp.server:main"

[project.urls]
Homepage = "https://github.com/vg14-developers/vgstation13-mcp"
Issues = "https://github.com/vg14-developers/vgstation13-mcp/issues"
Repository = "https://github.com/vg14-developers/vgstation13-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgstation13_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "UP017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
